[tool.poetry]
name = "my-search"
version = "0.1.0"
description = ""
authors = ["Vadzim <vadzimk@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
markdownify = "^0.11.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
