[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vadzim <vadzimk@hotmail.com>"]
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
markdownify = "^0.11.2"
Jinja2 = "^3.1.2"
python-dotenv = "^0.20.0"
playwright = "^1.24.0"
cfscrape = "^2.1.1"
cloudscraper = "^1.2.60"
Flask = "^2.2.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
sqlalchemy-stubs = "^0.4"
celery = "^5.2.7"
Flask-CeleryExt = "^0.4.3"
gunicorn = "^20.1.0"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
